# autograph

./: .clang-format  .cmake-format.yml  .eslintrc.cjs  .gitignore  .gitmodules  .swiftformat  Autograph.podspec  AutographProtocol.podspec  CMakeLists.txt  Cargo.toml  LICENSE  Package.swift  README.md  autograph.d.ts  build.rs  go.mod  jest.config.cjs  library.json  package-lock.json  package.json  settings.gradle.kts  tsconfig.json  types.d.ts
.devcontainer/: Containerfile  devcontainer.json
.github/: dependabot.yml
android/: AndroidManifest.xml  build.gradle.kts  settings.gradle.kts
android/src/main/cpp/: CMakeLists.txt  auth.c  cert.c  channel.c  helpers.c  key_exchange.c  key_pair.c  message.c  support.c
apple/Clibautograph.xcframework/: Info.plist
benches/: autograph.rs
c/: CMakeLists.txt
c/src/: cipher.c  handshake.c  hash.c  init.c  kdf.c  key_pair.c  message.c  ownership.c  safety_number.c  session.c  sign.c  sizes.c
cmake/: install.cmake  project.cmake  sources.cmake  targets.cmake
cplusplus/: CMakeLists.txt
cplusplus/benchmarks/: auth.cpp  cert.cpp  key_exchange.cpp  key_pair.cpp  main.cpp  message.cpp  ownership.cpp  safety_number.cpp
cplusplus/cmake/: benchmarks.cmake  emscripten.cmake  install.cmake  project.cmake  sources.cmake  targets.cmake  tests.cmake
cplusplus/cmake/toolchains/apple/: ios-simulator.toolchain.cmake  ios.toolchain.cmake  macos.toolchain.cmake  tvos-simulator.toolchain.cmake  tvos.toolchain.cmake  watchos-simulator.toolchain.cmake  watchos.toolchain.cmake
cplusplus/cmake/toolchains/embedded/: arm.toolchain.cmake  esp-idf.toolchain.cmake  zephyr.toolchain.cmake
cplusplus/include/: autograph.h  autograph.hpp
cplusplus/include/autograph/: aes.h  autograph_init.h  calculate_safety_number.h  certify_ownership.h  constants.h  constants.hpp  core.h  create-handshake.h  create-session.h  create_calculate_safety_number.h  create_certify.h  create_decrypt.h  create_encrypt.h  create_handshake.h  create_key_pair.h  create_party.h  create_session.h  create_verify.h  crypto.h  crypto.hpp  decrypt.h  decrypt_message.h  derive_secret_keys.h  diffie_hellman.h  encrypt.h  encrypt_message.h  external.h  generate_ephemeral_key_pair.h  generate_key_pair.h  get_transcript.h  handshake.h  hash.h  index_to_nonce.h  init.h  internal.h  kdf.h  key_pair.h  party.h  primitives.h  private.h  (+13 more)
cplusplus/include/autograph/core/: handshake.h  init.h  key_pair.h  message.h  ownership.h  safety_number.h  session.h
cplusplus/include/autograph/crypto/: aes.h  diffie_hellman.h  hash.h  kdf.h  sign.h
cplusplus/scripts/: apple-xcframework.sh  build.sh  install.sh  sodium-sources.sh  sodium-version.sh
cplusplus/src/: aes.cpp  auth.c  auth.cpp  autograph.cpp  autograph_init.cpp  calculate_safety_number.cpp  cert.c  cert.cpp  certify_ownership.cpp  channel.cpp  create-handshake.cpp  create-session.cpp  create_calculate_safety_number.cpp  create_certify.cpp  create_decrypt.cpp  create_encrypt.cpp  create_handshake.cpp  create_key_pair.cpp  create_party.cpp  create_session.cpp  create_verify.cpp  decrypt.cpp  decrypt_message.cpp  derive_secret_keys.cpp  diffie_hellman.cpp  encrypt.cpp  encrypt_message.cpp  error.cpp  external.c  generate_ephemeral_key_pair.cpp  generate_key_pair.cpp  get_transcript.cpp  handshake.cpp  hash.cpp  helpers.c  helpers.cpp  index_to_nonce.cpp  init.cpp  kdf.cpp  key_exchange.c  (+17 more)
cplusplus/src/core/: crypto.c  handshake.c  handshake.cpp  init.c  init.cpp  key_exchange.c  key_pair.c  key_pair.cpp  message.c  message.cpp  numbers.c  ownership.c  ownership.cpp  randombytes_internal.c  safety_number.c  safety_number.cpp  session.c  session.cpp  sign.c  sizes.c  sizes.cpp
cplusplus/src/core/channel/: key_exchange.c  numbers.c  session.c
cplusplus/src/core/crypto/: cipher.c  diffie_hellman.c  hash.c  kdf.c  sign.c
cplusplus/src/crypto/: aes.cpp  cipher.cpp  decrypt.cpp  diffie_hellman.cpp  encrypt.cpp  hash.cpp  index_to_nonce.cpp  kdf.cpp  sign.cpp  sign_message.cpp  verify_signature.cpp
cplusplus/tests/: channel.cpp  handshake.cpp  key_exchange.cpp  key_pair.cpp  safety-number.cpp  safety_number.cpp  session.cpp
cplusplus/tests/core/: handshake.cpp  init.cpp  key_exchange.cpp  key_exchange_verify.cpp  key_pair.cpp  message.cpp  numbers.cpp  ownership.cpp  safety_number.cpp  session.cpp  sizes.cpp
cplusplus/toolchains/apple/: ios-simulator.toolchain.cmake  ios.toolchain.cmake  macos.toolchain.cmake  tvos-simulator.toolchain.cmake  tvos.toolchain.cmake  watchos-simulator.toolchain.cmake  watchos.toolchain.cmake
expo/: .gitignore  README.md  expo-module.config.json  package-lock.json  package.json
expo/android/: build.gradle
expo/example/: .gitignore  App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
expo/ios/: ExpoAutograph.podspec  ExpoAutographModule.swift  ExpoAutographView.swift
expo/src/: ExpoAutograph.types.ts  ExpoAutographModule.ts  ExpoAutographModule.web.ts  ExpoAutographView.tsx  ExpoAutographView.web.tsx  index.ts
go/: README.md  go.mod
go/auth/: auth.go
go/cert/: cert.go
go/channel/: channel.go  channel_test.go
go/constants/: constants.go
go/kdf/: kdf.go
rust/: Cargo.toml
rust/benchmarks/: auth.rs  cert.rs  key_exchange.rs  key_pair.rs  main.rs  message.rs
rust/src/: auth.rs  autograph.rs  cert.rs  channel.rs  clib.rs  constants.rs  core.rs  error.rs  external.rs  helpers.rs  init.rs  kdf.rs  key_exchange.rs  key_pair.rs  lib.rs  message.rs  party.rs  primitives.rs  safety_number.rs  session.rs  sign.rs  state.rs  types.rs  utils.rs
rust/tests/: channel.rs  key_exchange.rs  key_pair.rs  safety_number.rs
scripts/: apple-xcframework.sh  sodium-sources.sh  sodium-version.sh
specification/: README.md  autograph.vp
src/: lib.rs  primitive.rs  protocol.rs
typescript/: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc.cjs  jest.config.cjs  package-lock.json  package.json  tsconfig.json  types.d.ts
verification/: README.md  credential.vp  handshake.vp
website/: astro.config.mjs  package-lock.json  package.json
(+181 files in other folders)
