[package]
name = "autograph"
version = "0.1.0"
edition = "2024"
publish = false

description = "A modular and open cryptographic protocol for decentralized identity, ownership, and communication"
repository = "https://github.com/christoffercarlsson/autograph"
keywords = [
  "cryptography",
  "decentralized",
  "identity",
  "ownership",
  "protocol",
]

authors = ["Christoffer Carlsson <cc@christoffercarlsson.com>"]
license = "MIT"

[dev-dependencies]
stedy = {
  git = "https://github.com/christoffercarlsson/stedy",
  branch = "v1.0.0-beta.5",
  features = ["getrandom"]
}
