[package]
name = "autograph_protocol"
description = "A Rust implementation of the Autograph protocol"
version = "1.0.0-alpha.4"
license = "Unlicense"
authors = ["Christoffer Carlsson <cc@christofferc.com>"]
edition = "2021"
keywords = [
    "security",
    "identity",
    "cryptography",
    "privacy",
    "authentication" 
  ]
repository = "https://github.com/christoffercarlsson/autograph"

[lib]
name = "autograph_protocol"
path = "src/lib.rs"

[[test]]
name = "channel"
path = "tests/channel.rs"

[[bench]]
name = "main"
path = "benchmarks/main.rs"
harness = false

[dependencies]
stedy = "0.22.5"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
