[package]
name = "autograph_protocol"
description = "A Rust implementation of the Autograph protocol"
version = "1.0.0-alpha.4"
license = "Unlicense"
authors = ["Christoffer Carlsson <cc@christofferc.com>"]
edition = "2021"
keywords = [
    "security",
    "identity",
    "cryptography",
    "privacy",
    "authentication" 
  ]
repository = "https://github.com/christoffercarlsson/autograph"

[lib]
name = "autograph_protocol"
path = "src/lib.rs"

[[test]]
name = "channel"
path = "tests/channel.rs"

[[test]]
name = "key_pair"
path = "tests/key_pair.rs"

[[bench]]
name = "main"
path = "benchmarks/main.rs"
harness = false

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["rand_core", "alloc"] }
ed25519-dalek = { version = "2.1.0", default-features = false, features = ["rand_core", "zeroize"] }
hkdf = "0.12.4"
rand_core = "0.6.4"
sha2 = { version = "0.10.8", default-features = false }
x25519-dalek = { version = "2.0.0", default-features = false, features = ["static_secrets", "zeroize"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
